c4prj2_input/grade.txt
Grading at Thu Aug  1 13:09:56 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:9:45: error: unknown type name ‘futrue_cards_t’
 deck_t * hand_from_string(const char * str, futrue_cards_t * fc){
                                             ^
input.c: In function ‘read_input’:
input.c:41:3: error: ‘sz’ undeclared (first use in this function)
   sz = 0;
   ^
input.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
